# sck-core-db

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
core_db/: __init__.py  _version.py  actions.py  config.py  constants.py  dbhelper.py  exceptions.py  models.py  response.py
core_db/audit/: __init__.py  audit.py
core_db/event/: __init__.py  actions.py  models.py
core_db/facter/: __init__.py  actions.py  facter.py
core_db/item/: __init__.py  actions.py  models.py
core_db/item/app/: __init__.py  actions.py  models.py
core_db/item/branch/: __init__.py  actions.py  models.py
core_db/item/component/: __init__.py  actions.py  models.py
core_db/item/portfolio/: __init__.py  actions.py  models.py
core_db/oauth/: __init__.py  actions.py  authorization.py  challenge.py  forgotpass.py  models.py  oauthtable.py  ratelimits.py
core_db/passkey/: __init__.py  passkeys.py
core_db/platform/: README  __init__.py  core-automation-db-facts.yaml  core-automation-db-items.yaml  core_automation-db-core.yaml  deploy.actions  deployspec.yaml  teardown.actions  teardownspec.yaml
core_db/platform/files/: apps_lambda.py  portfolio_lambda.py  zones_lambda.py
core_db/profile/: __init__.py  actions.py  model.py
core_db/registry/: __init__.py  actions.py  models.py
core_db/registry/app/: __init__.py  actions.py  models.py
core_db/registry/client/: __init__.py  actions.py  models.py
core_db/registry/portfolio/: __init__.py  actions.py  models.py
core_db/registry/zone/: __init__.py  actions.py  models.py
tests/: bootstrap.py  compose.yml  conftest.py  start.ps1  start.sh  test_actions_apps.py  test_actions_clients.py  test_actions_events.py  test_actions_items.py  test_actions_portfolios.py  test_actions_profiles.py  test_actions_zones.py  test_config.py  test_factor.py  test_paginator.py  test_registry_serialization.py  test_table_actions.py  test_table_actions_data copy.py  test_table_actions_data.py  view.ps1  view.sh
tests/dynamodb-data/: shared-local-instance.db
