[tool.poetry]
name = "sck-core-db"
version = "0.0.9"
description = "Core Database Library to access DynamoDB for Core-Automation"
authors = ["James Barwick <jbarwick@me.com>"]
readme = "README.md"
keywords = ["sck", "core", "aws", "cloud", "automation"]

[[tool.poetry.packages]]
include = "core_db"

[[tool.poetry.source]]
name = "nexus"
url = "https://monster-jj.jvj28.com:9091/repository/pypi/simple/"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = ">=1.39.9"
botocore = ">=1.39.9"
pynamodb = "^6.0.1"
pydantic = "^2.10.3"
sck-core-framework = "^0.0.9"

[tool.poetry.group.dev.dependencies]
boto3-stubs = ">=1.39.9"
black = "^24.10.0"
flake8 = "^7.1.1"
pytest-dotenv = "^0.5.2"
pytest-cov = "^6.0.0"
types-python-dateutil = "^2.9.0.20241206"

[tool.poetry-dynamic-versioning]
enable = true
bump = true
ignore-untracked = true
style = "semver"

[tool.poetry-dynamic-versioning.substitution]
files = ["core_db/__init__.py"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
