[project]
name = "sck-core-db"
description = "Core Database Library to access DynamoDB for Core-Automation"
authors = [{ name = "James Barwick", email = "jbarwick@me.com" }]
readme = "README.md"
keywords = ["sck", "core", "aws", "cloud", "automation"]
requires-python = ">=3.11,<3.13"

dependencies = [
    "boto3 (>=1.34,<1.35)",
    "botocore (>=1.34,<1.35)",
    "pynamodb (>=6.1,<7.0)",
    "pydantic (>=2.6,<2.7)",
    "email-validator (>=2.2,<3.0)",
]

dynamic = []
version = "0.1.2-pre.28+1d11573"

[project.optional-dependencies]
dev = [
    "boto3-stubs (>=1.34.51,<1.35.0)",
    "black (>=24.10.0,<25.0)",
    "flake8 (>=7.1.1,<8.0)",
    "pytest-dotenv (>=0.5.2,<0.6.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
    "types-python-dateutil (>=2.9.0.20241206)",
    "pytest (>=8.3.3)"
]

[tool.poetry]

packages = [{ include = "core_db" }]

[[tool.poetry.source]]
name = "nexus"
url = "https://monster-jj.jvj28.com:9091/repository/pypi/simple/"
priority = "primary"

# NOTE: The previous "dependencies = [ ... ]" array under [tool.poetry] was invalid syntax.
# Define Poetry dependencies in the standard table format below. Runtime deps are
# still listed in the PEP 621 [project] table; here we add the local path dependency
# and python constraint so Poetry resolves correctly.

[tool.poetry.dependencies]
sck-core-framework = { path = "../sck-core-framework", develop = true }

[tool.poetry-dynamic-versioning]
enable = true
bump = true
ignore-untracked = true
style = "semver"
substitution = { files = ["core_db/__init__.py"] }

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.black]
line-length = 132
target-version = ["py311"]
skip-string-normalization = true

# Use a proper multi-line regex (mirrors style used in framework module)
exclude = '''
/(
        \.git
    | \.mypy_cache
    | \.pytest_cache
    | build
    | dist
    | venv
    | \.venv
    | htmlcov
)/
'''
