[project]
name = "sck-core-db"
version = "1.3.0"
description = "Core Database Library to access DynamoDB for Core-Automation"
authors = [{ name = "James Barwick", email = "jbarwick@eits.com.sg" }]
license = "GPL-3.0-only"
readme = "README.md"
maintainers = [{ name = "James Barwick", email = "jbarwick@eits.com.sg" }]
keywords = ["sck", "core", "aws", "cloud", "automation"]
requires-python = ">=3.11,<3.13"

dependencies = [
    "boto3 (>=1.34,<1.35)",
    "botocore (>=1.34,<1.35)",
    "pynamodb (>=6.1,<7.0)",
    "email-validator (>=2.2,<3.0)",
    "pydantic>=2.10,<2.11",
    "sck-core-framework",
]

[project.optional-dependencies]
dev = [
    "boto3-stubs (>=1.34.51,<1.35.0)",
    "black",
    "flake8",
    "pytest",
    "pytest-dotenv",
    "pytest-cov",
    "types-python-dateutil",
]

[tool.hatch.build.targets.wheel]
packages = ["core_db"]

[tool.black]
line-length = 132
target-version = ["py311"]
skip-string-normalization = true

# Use a proper multi-line regex (mirrors style used in framework module)
exclude = '''
/(
        \.git
    | \.mypy_cache
    | \.pytest_cache
    | build
    | dist
    | venv
    | \.venv
    | htmlcov
)/
'''

[tool.uv.sources]
sck-core-framework = { path = "../sck-core-framework", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
